# SACRED

./: .gitignore  CLAUDE.md  README.md  config.py  experiment_one_results.md  main.py  nnlb_analysis.py  phase_one_plan.md  phase_one_plan_fixes.md  pyproject.toml  time_log.md
analysis/: cosine_concept_deletion.py  cosine_deletion_supplement.py  exp2_pvalues.py  journal_stats.py  layer_wise.py  statistical.py  transfer_matrix.py
data/: concept_vocabularies.py  contrastive_pairs.py
docs/: claim_evidence_map.md  exp3_concept_geometry_guide.md  exp5_token_max_interpretation.md  journal_claims_prereg.md  paper_artifacts_checklist.md
experiments/: exp1_kinship.py  exp2_pivot.py  exp3_layer_wise.py  exp4_transfer_matrix.py  exp5_cosine_supplement.py  run_calibration.py
extraction/: activation_capture.py  circuit_discovery.py  concept_vectors.py
intervention/: calibration.py  hooks.py  necessity.py  pivot_diagnosis.py
journal/: __init__.py  ablation_runner.py  build_paper_artifacts.py  hyperparam_sweep.py  run_manifest.py  validate_claims.py
outputs/: exp1_kinship_deletion.json  exp1_sacred_deletion.json  exp2_pivot_kinship.json  exp3_layer_wise.json  exp4_transfer_summary_kinship.json
results/: calibration_results.json  exp2_pivot_kinship.json  exp3_layer_wise.json  exp4_transfer_summary_kinship.json  exp4_transfer_summary_sacred.json
scripts/: config.sh  download_cache.sh  download_models.py  run_calibration.sh  run_exp1.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh  run_main.sh
tests/: test_experiment_correctness.py  test_pca_vs_mean.py
(+51 files in other folders)
